--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
                window.location = (userLang + "/index.html");
             }
          //-->
+         Redirect();
       </script>
    </head>
-   
-   <body>
-      <p>Click the following button, you will be redirected to home page.</p>
-      
-      <form>
-         <input type = "button" value = "Redirect Me" onclick = "Redirect();" />
-      </form>
-      
-   </body>
 </html>
