--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
          var userLang = navigator.language || navigator.userLanguage;
          <!--
             function Redirect() {
-               window.location = (userLang + "/index.html");
+               window.location = (userLang);
             }
          //-->
          if (userLang == "fr") {
@@ -14,7 +14,7 @@
            } else {
            <!--
             function RedirectDefault() {
-               window.location = ("en/index.html");
+               window.location = ("en/");
             }
             }
          //-->
