--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
          var userLang = navigator.language || navigator.userLanguage;
          <!--
             function Redirect() {
-               window.location = (userLang);
+               window.location = (userLang + "/");
             }
          //-->
          if (userLang == "fr") {
