--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             function RedirectDefault() {
                window.location = ("en/");
             }
+              RedirectDefault();
             }
          //-->
       </script>
