--- a/fr/index.html
+++ b/fr/index.html
@@ -7,7 +7,11 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image : url(../bg_home.png);
+  background-image : url(https://raw.githubusercontent.com/SiniKraft/website/main/bg_home.png);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  text-align: center;
 }
 
 .topnav {
@@ -25,12 +29,12 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #ffcb6b;
   color: black;
 }
 
 .topnav a.active {
-  background-color: #4CAF50;
+  background-color: #FFA500;
   color: white;
 }
 </style>
@@ -44,7 +48,7 @@ body {
 </div>
 
 <div style="padding-left:16px">
-  <h2>Top Navigation Example</h2>
+  <h1>Top Navigation Example</h1>
   <p>Some content..</p>
 </div>
 
