--- a/en/index.html
+++ b/en/index.html
@@ -7,6 +7,11 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-image : url(https://raw.githubusercontent.com/SiniKraft/website/main/bg_home.png);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  text-align: center;
 }
 
 .topnav {
@@ -24,12 +29,12 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #ffcb6b;
   color: black;
 }
 
 .topnav a.active {
-  background-color: #4CAF50;
+  background-color: #FFA500;
   color: white;
 }
 </style>
