--- a/fr/index.html
+++ b/fr/index.html
@@ -1,9 +1,15 @@
 <title>Site de SiniKraft</title>
 <!DOCTYPE html>
 <html>
+<link rel="shortcut icon" type="image/png" href="../icon.png"/>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  text-shadow: 0.1em 0.1em 0.5em
+}
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -21,7 +27,7 @@ body {
 
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #ffc861;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -30,7 +36,7 @@ body {
 
 .topnav a:hover {
   background-color: #ffcb6b;
-  color: black;
+  color: #bd7b00;
 }
 
 .topnav a.active {
@@ -48,8 +54,8 @@ body {
 </div>
 
 <div style="padding-left:16px">
-  <h1>Top Navigation Example</h1>
-  <p>Some content..</p>
+  <a href="", target="_self", style="color: #db8f00;font-size:25px;"><h1>Site de SiniKraft</h1></a>
+  <p>Bonjour, je suis SiniKraft</p>
 </div>
 
 </body>
