--- a/fr/index.html
+++ b/fr/index.html
@@ -1,15 +1,33 @@
 <title>Site de SiniKraft</title>
 <!DOCTYPE html>
 <html>
-<link rel="shortcut icon" type="image/png" href="../icon.png"/>
+<link rel="shortcut icon" type="image/png" href="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1?overlay=true"/>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8"/>
 <style>
+footer {
+  position: absolute;
+  width: 99.9999%;
+  padding: 0.5px;
+  background-color: #333;
+  color: white;
+  display: block;
+  overflow: hidden;
+  text-decoration: none;
+  font-size: 17px;
+  text-align: center;
+}
+p {
+  color : black;
+}
+
 h1 {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
-  text-shadow: 0.1em 0.1em 0.5em
+  text-shadow: 0.01em 0.01em 0.2em
 }
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -48,15 +66,27 @@ body {
 <body>
 
 <div class="topnav">
-  <a class="active" href="#home">Acceuil</a>
-  <a href="#projects">Projets</a>
+  <a class="active" href="">Acceuil</a>
+  <a href="projets/index.html">Projets</a>
+  <a href="#miel-pops">Miel Pops</a>
   <a href="#contact">Contact</a>
 </div>
 
 <div style="padding-left:16px">
-  <a href="", target="_self", style="color: #db8f00;font-size:25px;"><h1>Site de SiniKraft</h1></a>
-  <p>Bonjour, je suis SiniKraft</p>
+  <a href="", target="_self", style="color: #FFA500;font-size:25px;"><h1>Site de SiniKraft</h1></a>
+  <div style="font-size: 1.5em">
+  <p>Bonjour, je suis SiniKraft !</p>
+  <p>Ici, tu peux trouver des choses intéressantes sur l'unvivers Miel Pops<br>
+  	Ainsi que le téléchargement de mes jeux et applis dans l'onglet <a href="", target="_self", style="color: #FFA500">"Projets"</a> !
+  	<br>Voici mon magnifique skin Minecraft :<br><br><img src="https://www.mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150"></p>
 </div>
-
+</div>
+<footer>
+	<div style="font-size:17px">
+	<p>
+  Politique de confidentialité | Contact
+  </p>
+</div>
+</footer>
 </body>
 </html>
