--- a/fr/index.html
+++ b/fr/index.html
@@ -1,14 +1,14 @@
 <title>Site de SiniKraft</title>
 <!DOCTYPE html>
 <html>
-<link rel="shortcut icon" type="image/png" href="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1?overlay=true"/>
+<link rel="shortcut icon" type="image/png" href="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1.png?overlay=true"/>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8"/>
 <style>
 footer {
   position: absolute;
-  width: 99.9999%;
+  width: 99.9%;
   padding: 0.5px;
   background-color: #333;
   color: white;
@@ -31,7 +31,7 @@ h1 {
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image : url(https://raw.githubusercontent.com/SiniKraft/website/main/bg_home.png);
+  background-image : url(../images/bg_home.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -68,8 +68,8 @@ body {
 <div class="topnav">
   <a class="active" href="">Acceuil</a>
   <a href="projets/index.html">Projets</a>
-  <a href="#miel-pops">Miel Pops</a>
-  <a href="#contact">Contact</a>
+  <a href="miel-pops/index.html">Miel Pops</a>
+  <a href="contact/index.html">Contact</a>
 </div>
 
 <div style="padding-left:16px">
@@ -77,14 +77,14 @@ body {
   <div style="font-size: 1.5em">
   <p>Bonjour, je suis SiniKraft !</p>
   <p>Ici, tu peux trouver des choses intéressantes sur l'unvivers Miel Pops<br>
-  	Ainsi que le téléchargement de mes jeux et applis dans l'onglet <a href="", target="_self", style="color: #FFA500">"Projets"</a> !
+  	Ainsi que le téléchargement de mes jeux et applis dans l'onglet <a href="projets/index.html", target="_self", style="color: #FFA500">"Projets"</a> !
   	<br>Voici mon magnifique skin Minecraft :<br><br><img src="https://www.mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150"></p>
 </div>
 </div>
 <footer>
 	<div style="font-size:17px">
 	<p>
-  Politique de confidentialité | Contact
+  <a style="color: #FFA500;" href="../privacy/index.html">Politique de confidentialité</a> | <a style="color: #FFA500;" href="contact/index.html" target="_self">Contact</a>
   </p>
 </div>
 </footer>
