--- a/fr/projets/index.html
+++ b/fr/projets/index.html
@@ -1,7 +1,7 @@
 <title>Site de SiniKraft</title>
 <!DOCTYPE html>
 <html>
-<link rel="shortcut icon" type="image/png" href="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1?overlay=true"/>
+<link rel="shortcut icon" type="image/png" href="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1.png?overlay=true"/>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8"/>
@@ -56,7 +56,7 @@ h1 {
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image : url(https://raw.githubusercontent.com/SiniKraft/website/main/bg_home.png);
+  background-image : url(../../images/bg_home.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -93,8 +93,8 @@ body {
 <div class="topnav">
   <a href="../index.html">Acceuil</a>
   <a class="active" href="">Projets</a>
-  <a href="#miel-pops">Miel Pops</a>
-  <a href="#contact">Contact</a>
+  <a href="../miel-pops/index.html">Miel Pops</a>
+  <a href="../contact/index.html">Contact</a>
 </div>
 
 <div style="padding-left:16px">
@@ -125,6 +125,14 @@ body {
     <a href="https://github.com/SiniKraft/Space-Escape/" target="_blank"><article class="all-projects">Source</article></a>
     <br><br><br><br><br><br>
   </article>
+  <article class="project">
+    <h2>Magic Witchcraft</h2>
+    <p>Magic Witchcraft est un mod minecraft forge qui ajoute des choses magiques à Minecraft<br>
+    Les téléchargements peuvent être trouvés sur CurseForge</p>
+    <br>
+    <a href="https://www.curseforge.com/minecraft/mc-mods/magic-witchcraft/files/all" target="_blank"><article class="all-projects">Téléchargement (curseforge.com)</article></a>
+    <br><br><br><br><br><br>
+  </article>
 </article></p>
 </div>
 </div>
@@ -132,7 +140,7 @@ body {
 <footer>
 	<div style="font-size:17px">
 	<p>
-  Politique de confidentialité | Contact
+  <a href="../../privacy/index.html" target="_self" >Politique de confidentialité</a> | <a href="../contact/index.html" target="_self">Contact</a>
   </p>
 </div>
 </footer>
