--- a/en/index.html
+++ b/en/index.html
@@ -1,13 +1,37 @@
-<title>SiniKraft's Website</title>
 <!DOCTYPE html>
 <html>
+<title>Sinikraft's website</title>
+<link rel="shortcut icon" type="image/png" href="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1.png?overlay=true"/>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8"/>
 <style>
+footer {
+  position: absolute;
+  width: 99.9%;
+  padding: 0.5px;
+  background-color: #333;
+  color: white;
+  display: block;
+  overflow: hidden;
+  text-decoration: none;
+  font-size: 17px;
+  text-align: center;
+}
+p {
+  color : black;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  text-shadow: 0.01em 0.01em 0.2em
+}
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image : url(https://raw.githubusercontent.com/SiniKraft/website/main/bg_home.png);
+  background-image : url(../images/bg_home.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -21,7 +45,7 @@ body {
 
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #ffc861;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -30,7 +54,7 @@ body {
 
 .topnav a:hover {
   background-color: #ffcb6b;
-  color: black;
+  color: #bd7b00;
 }
 
 .topnav a.active {
@@ -42,16 +66,27 @@ body {
 <body>
 
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#projects">Projects</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a class="active" href="">Home</a>
+  <a href="projects/index.html">Projects</a>
+  <a href="honey-pops/index.html">Honey Pops</a>
+  <a href="contact/index.html">Contact</a>
 </div>
 
 <div style="padding-left:16px">
-  <h2>Top Navigation Example</h2>
-  <p>Some content..</p>
+  <a href="", target="_self", style="color: #FFA500;font-size:25px;"><h1>Sinikraft's Website</h1></a>
+  <div style="font-size: 1.5em">
+  <p>Hello, I'm SiniKraft !</p>
+  <p>Here you can find interesting things about the Honey Pops universe,<br>
+    as well as downloading my games and apps in the <a href="projets/index.html", target="_self", style="color: #FFA500">"Projects"</a> tab !
+    <br>Here is my beautiful Minecraft skin:<br><br><img src="https://www.mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150"></p>
 </div>
-
+</div>
+<footer>
+  <div style="font-size:17px">
+  <p>
+  <a style="color: #FFA500;" href="../privacy/index.html">Privacy Policy</a> | <a style="color: #FFA500;" href="contact/index.html" target="_self">Contact</a>
+  </p>
+</div>
+</footer>
 </body>
 </html>
