--- a/fr/index.html
+++ b/fr/index.html
@@ -67,9 +67,9 @@ body {
 
 <div class="topnav">
   <a class="active" href="">Acceuil</a>
-  <a href="projets/index.html">Projets</a>
-  <a href="miel-pops/index.html">Miel Pops</a>
-  <a href="contact/index.html">Contact</a>
+  <a href="projets/">Projets</a>
+  <a href="miel-pops/">Miel Pops</a>
+  <a href="contact/">Contact</a>
 </div>
 
 <div style="padding-left:16px">
@@ -77,14 +77,14 @@ body {
   <div style="font-size: 1.5em">
   <p>Bonjour, je suis SiniKraft !</p>
   <p>Ici, tu peux trouver des choses intéressantes sur l'unvivers Miel Pops<br>
-  	Ainsi que le téléchargement de mes jeux et applis dans l'onglet <a href="projets/index.html", target="_self", style="color: #FFA500">"Projets"</a> !
+  	Ainsi que le téléchargement de mes jeux et applis dans l'onglet <a href="projets/", target="_self", style="color: #FFA500">"Projets"</a> !
   	<br>Voici mon magnifique skin Minecraft :<br><br><img src="https://www.mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150"></p>
 </div>
 </div>
 <footer>
 	<div style="font-size:17px">
 	<p>
-  <a style="color: #FFA500;" href="../privacy/index.html">Politique de confidentialité</a> | <a style="color: #FFA500;" href="contact/index.html" target="_self">Contact</a>
+  <a style="color: #FFA500;" href="../privacy/">Politique de confidentialité</a> | <a style="color: #FFA500;" href="contact/" target="_self">Contact</a>
   </p>
 </div>
 </footer>
