--- a/fr/contact/index.html
+++ b/fr/contact/index.html
@@ -91,9 +91,9 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="../index.html">Acceuil</a>
-  <a href="../projets/index.html">Projets</a>
-  <a href="../miel-pops/index.html">Miel Pops</a>
+  <a href="../">Acceuil</a>
+  <a href="../projets/">Projets</a>
+  <a href="../miel-pops/">Miel Pops</a>
   <a class="active" href="">Contact</a>
 </div>
 
@@ -108,7 +108,7 @@ body {
 <footer>
 	<div style="font-size:17px">
 	<p>
-  <a href="../../privacy/index.html" target="_self" >Politique de confidentialité</a> | <a href="" target="_self">Contact</a>
+  <a href="../../privacy/" target="_self" >Politique de confidentialité</a> | <a href="" target="_self">Contact</a>
   </p>
 </div>
 </footer>
