--- a/fr/miel-pops/index.html
+++ b/fr/miel-pops/index.html
@@ -97,10 +97,10 @@ iframe {
 <body>
 
 <div class="topnav">
-  <a href="../index.html">Acceuil</a>
-  <a href="../projets/index.html">Projets</a>
+  <a href="../">Acceuil</a>
+  <a href="../projets/">Projets</a>
   <a class="active" href="">Miel Pops</a>
-  <a href="../contact/index.html">Contact</a>
+  <a href="../contact/">Contact</a>
 </div>
 
 <div style="padding-left:16px">
@@ -151,7 +151,7 @@ iframe {
 <footer>
 	<div style="font-size:17px">
 	<p>
-  <a href="../../privacy/index.html" target="_self" >Politique de confidentialité</a> | <a href="../contact/index.html" target="_self" >Contact</a>
+  <a href="../../privacy/" target="_self" >Politique de confidentialité</a> | <a href="../contact/" target="_self" >Contact</a>
   </p>
 </div>
 </footer>
