--- a/fr/projets/index.html
+++ b/fr/projets/index.html
@@ -91,10 +91,10 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="../index.html">Acceuil</a>
+  <a href="../">Acceuil</a>
   <a class="active" href="">Projets</a>
-  <a href="../miel-pops/index.html">Miel Pops</a>
-  <a href="../contact/index.html">Contact</a>
+  <a href="../miel-pops/">Miel Pops</a>
+  <a href="../contact/">Contact</a>
 </div>
 
 <div style="padding-left:16px">
@@ -140,7 +140,7 @@ body {
 <footer>
 	<div style="font-size:17px">
 	<p>
-  <a href="../../privacy/index.html" target="_self" >Politique de confidentialité</a> | <a href="../contact/index.html" target="_self">Contact</a>
+  <a href="../../privacy/" target="_self" >Politique de confidentialité</a> | <a href="../contact/" target="_self">Contact</a>
   </p>
 </div>
 </footer>
