--- a/en/index.html
+++ b/en/index.html
@@ -67,9 +67,9 @@ body {
 
 <div class="topnav">
   <a class="active" href="">Home</a>
-  <a href="projects/index.html">Projects</a>
-  <a href="honey-pops/index.html">Honey Pops</a>
-  <a href="contact/index.html">Contact</a>
+  <a href="projects/">Projects</a>
+  <a href="honey-pops/">Honey Pops</a>
+  <a href="contact/">Contact</a>
 </div>
 
 <div style="padding-left:16px">
@@ -77,14 +77,14 @@ body {
   <div style="font-size: 1.5em">
   <p>Hello, I'm SiniKraft !</p>
   <p>Here you can find interesting things about the Honey Pops universe,<br>
-    as well as downloading my games and apps in the <a href="projets/index.html", target="_self", style="color: #FFA500">"Projects"</a> tab !
+    as well as downloading my games and apps in the <a href="projets/", target="_self", style="color: #FFA500">"Projects"</a> tab !
     <br>Here is my beautiful Minecraft skin:<br><br><img src="https://www.mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150"></p>
 </div>
 </div>
 <footer>
   <div style="font-size:17px">
   <p>
-  <a style="color: #FFA500;" href="../privacy/index.html">Privacy Policy</a> | <a style="color: #FFA500;" href="contact/index.html" target="_self">Contact</a>
+  <a style="color: #FFA500;" href="../privacy/">Privacy Policy</a> | <a style="color: #FFA500;" href="contact/" target="_self">Contact</a>
   </p>
 </div>
 </footer>
