--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -91,9 +91,9 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="../index.html">Home</a>
-  <a href="../projects/index.html">Projects</a>
-  <a href="../honey-pops/index.html">Honey Pops</a>
+  <a href="../">Home</a>
+  <a href="../projects/">Projects</a>
+  <a href="../honey-pops/">Honey Pops</a>
   <a class="active" href="">Contact</a>
 </div>
 
@@ -108,7 +108,7 @@ body {
 <footer>
 	<div style="font-size:17px">
 	<p>
-  <a href="../../privacy/index.html" target="_self" >Privacy Policy</a> | <a href="" target="_self">Contact</a>
+  <a href="../../privacy/" target="_self" >Privacy Policy</a> | <a href="" target="_self" >Contact</a>
   </p>
 </div>
 </footer>
