--- a/en/honey-pops/index.html
+++ b/en/honey-pops/index.html
@@ -97,10 +97,10 @@ iframe {
 <body>
 
 <div class="topnav">
-  <a href="../index.html">Home</a>
-  <a href="../projects/index.html">Projects</a>
+  <a href="../">Home</a>
+  <a href="../projects/">Projects</a>
   <a class="active" href="">Honey Pops</a>
-  <a href="../contact/index.html">Contact</a>
+  <a href="../contact/">Contact</a>
 </div>
 
 <div style="padding-left:16px">
@@ -151,7 +151,7 @@ iframe {
 <footer>
   <div style="font-size:17px">
   <p>
-  <a href="../../privacy/index.html" target="_self" >Privacy Policy</a> | <a href="../contact/index.html" target="_self" >Contact</a>
+  <a href="../../privacy/" target="_self" >Privacy Policy</a> | <a href="../contact/" target="_self" >Contact</a>
   </p>
 </div>
 </footer>
