--- a/en/projects/index.html
+++ b/en/projects/index.html
@@ -91,10 +91,10 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="../index.html">Home</a>
+  <a href="../">Home</a>
   <a class="active" href="">Projects</a>
-  <a href="../honey-pops/index.html">Honey Pops</a>
-  <a href="../contact/index.html">Contact</a>
+  <a href="../honey-pops/">Honey Pops</a>
+  <a href="../contact/">Contact</a>
 </div>
 
 <div style="padding-left:16px">
@@ -140,7 +140,7 @@ body {
 <footer>
   <div style="font-size:17px">
   <p>
-  <a href="../../privacy/index.html" target="_self" >Privacy Policy</a> | <a href="../contact/index.html" target="_self">Contact</a>
+  <a href="../../privacy/" target="_self" >Privacy Policy</a> | <a href="../contact/" target="_self">Contact</a>
   </p>
 </div>
 </footer>
