--- a/privacy/index.html
+++ b/privacy/index.html
@@ -72,7 +72,7 @@ a {
   <div style="font-size: 1.5em">
   <p>[FR] Politique de confidentialité</p>
   <p>Ce site ne stocke aucun cookie ou autre élément permettant le tracing<br>
-  Comme vous pouvez le voir, il est hébergé sur github donc vous êtes d'accord avec leur politique de confidentialité.<br>
+  Comme vous pouvez le voir, il est hébergé sur github donc vous êtes d'accord avec leur <a href="https://docs.github.com/en/github/site-policy/github-privacy-statement" target="_blank" >politique de confidentialité</a>.<br>
 Les sites suivant pourront uniquement stocker votre adresse ip sans autres informations permettant de vous identifier,<br>
 car aucun script n'est chargé mais juste un requette pour obtenir une image ou une vidéo est effectué à :<br>
 <a href="https://www.mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150" target="_blank" >https://www.mc-heads.net/</a> (pour le skin Minecraft),<br>
@@ -82,7 +82,7 @@ car aucun script n'est chargé mais juste un requette pour obtenir une image ou 
 <p><a href="../" target="_self">Retour à l'acceuil</a></p>
 <p>[EN] Privacy Policy</p>
   <p>This site does not store any cookie or other element allowing tracing<br>
-As you can see it is hosted on github so you agree with their privacy policy.<br>
+As you can see it is hosted on github so you agree with their <a href="https://docs.github.com/en/github/site-policy/github-privacy-statement" target="_blank" >privacy policy</a>.<br>
 The following sites will only be able to store your IP address without any other information allowing you to be identified,<br>
 because no script is loaded but just a request to get an image or a video is done at:<br>
 <a href="https://www.mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150" target="_blank" >https://www.mc-heads.net/</a> (for the Minecraft skin),<br>
