--- a/fr/index.html
+++ b/fr/index.html
@@ -62,6 +62,7 @@ body {
   color: white;
 }
 </style>
+<img src="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1.png?overlay=true" width="0"height="0" />
 </head>
 <body>
 
