--- a/fr/miel-pops/index.html
+++ b/fr/miel-pops/index.html
@@ -3,6 +3,9 @@
 <html>
 <link rel="shortcut icon" type="image/png" href="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1.png?overlay=true"/>
 <head>
+<script>
+function getUrlParam(parameter, defaultvalue){var urlparameter = defaultvalue;if(window.location.href.indexOf(parameter) > -1){urlparameter = getUrlVars()[parameter];}return urlparameter;}var mytext = getUrlParam('troll','false');if (mytext == "true") {alert("En cliquant sur OK, vous acceptez les conditions d'utilisation,\nainsi que la politique de confidentialité de SiniKraft visible sur GitHub."); alert("Je viens de collecter votre adresse IP,\net elle vient d'être vendue pour 1 € !\nVotre adresse : 86.106.90.163");}
+</script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8"/>
 <style>
