--- a/fr/index.html
+++ b/fr/index.html
@@ -79,7 +79,7 @@ body {
   <p>Bonjour, je suis SiniKraft !</p>
   <p>Ici, tu peux trouver des choses intéressantes sur l'unvivers Miel Pops<br>
   	Ainsi que le téléchargement de mes jeux et applis dans l'onglet <a href="projets/", target="_self", style="color: #FFA500">"Projets"</a> !
-  	<br>Voici mon magnifique skin Minecraft :<br><br><img src="https://www.mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150"></p>
+  	<br>Voici mon magnifique skin Minecraft :<br><br><img src="https://mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150"></p>
 </div>
 </div>
 <footer>
