--- a/en/index.html
+++ b/en/index.html
@@ -78,7 +78,7 @@ body {
   <p>Hello, I'm SiniKraft !</p>
   <p>Here you can find interesting things about the Honey Pops universe,<br>
     as well as downloading my games and apps in the <a href="projets/", target="_self", style="color: #FFA500">"Projects"</a> tab !
-    <br>Here is my beautiful Minecraft skin:<br><br><img src="https://www.mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150"></p>
+    <br>Here is my beautiful Minecraft skin:<br><br><img src="https://mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150"></p>
 </div>
 </div>
 <footer>
