--- a/magic/redirect.html
+++ b/magic/redirect.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title> </title>
 <html>
-  <head>
+  <body>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8"/>
     <script>
@@ -16,5 +16,5 @@
       alert(newUser);
       // empty string
     </script>
-  </head>
+  </body>
 </html>
