--- a/magic/redirect.html
+++ b/magic/redirect.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8"/>
     <script>
+      const queryString = window.location.search;
+      console.log(queryString);
       const urlParams = new URLSearchParams("https://example.com/?product=troussers&color=black&newuser&size=s");
       const size = urlParams.get('size');
       alert(size);
