--- a/magic/redirect.html
+++ b/magic/redirect.html
@@ -7,7 +7,7 @@
     <script>
       const queryString = window.location.search;
       const urlParams = new URLSearchParams(queryString);
-      if (!urlParams.has("target")) {
+      if (urlParams.has("target")) {
         console.log("True");
       } else {
         console.log("False");
