--- a/magic/redirect.html
+++ b/magic/redirect.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<title> </title>
+<title>redirect</title>
 <html>
-  <body>
+  <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8"/>
-    <script>
+    <script type="text/javascript">
       const queryString = window.location.search;
       const urlParams = new URLSearchParams(queryString);
       if (urlParams.has("target")) {
-        console.log("True");
+        console.log("Redirecting ...");
       } else {
-        console.log("False");
+        console.log("Missing target argument, printing error ...");
+        document.getElementById("error") = "Missing target argument !";
       }
       const size = urlParams.get('size');
     </script>
+  </head>
+  <body>
+    <p id="error">
+    </p>
   </body>
 </html>
