--- a/magic/redirect.html
+++ b/magic/redirect.html
@@ -11,11 +11,12 @@
         console.log("Redirecting ...");
       } else {
         console.log("Missing target argument, printing error ...");
-        document.write("Missing target argument !");
+        document.getElementById("demo").innerHTML = "Missing target argument !";
       }
       const size = urlParams.get('size');
     </script>
   </head>
   <body>
+    <p id="demo"></p>
   </body>
 </html>
