--- a/magic/redirect.html
+++ b/magic/redirect.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8"/>
     <p id="demo"></p>
+    <script data-main="scripts/main" src="../require.js"></script>
     <script type="text/javascript">
+      var json = require('./data.json');
       const queryString = window.location.search;
       const urlParams = new URLSearchParams(queryString);
       if (urlParams.has("target")) {
