--- a/magic/redirect.html
+++ b/magic/redirect.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8"/>
     <p id="demo"></p>
+    <script src="jquery/jquery-3.6.0.min.js"></script>
     <script type="text/javascript">
       $.getJSON("data.json", function(json) {
     console.log(json); // this will show the info it in firebug console
