--- a/magic/redirect.html
+++ b/magic/redirect.html
@@ -14,9 +14,8 @@
       const urlParams = new URLSearchParams(queryString);
       if (urlParams.has("target")) {
         console.log("Redirecting ...");
-        if (urlParams.get("target") == "arouf-gangsta") {
-          window.location.replace("http://youre.gay");
-        }
+        var obj = JSON.parse(json);
+        eval("window.location.replace(obj." + urlParams.get("target") + ");"),
       } else {
         console.log("Missing target argument, printing error ...");
         document.getElementById("demo").innerHTML = "Missing target argument !";
