--- a/magic/redirect.html
+++ b/magic/redirect.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8"/>
     <p id="demo"></p>
-    <script src="jquery/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="jquery/jquery-3.6.0.min.js"></script>
     <script type="text/javascript">
       $.getJSON("data.json", function(json) {
-    console.log(json); // this will show the info it in firebug console
+    console.log("Got json : '" + json + "' !");
      });
       const queryString = window.location.search;
       const urlParams = new URLSearchParams(queryString);
       if (urlParams.has("target")) {
         console.log("Redirecting ...");
-        var obj = JSON.parse(json);
-        eval("window.location.replace(obj." + urlParams.get("target") + ");")
+        var new_j = JSON.parse(json);
+        eval("window.location.replace(new_j." + urlParams.get("target") + ");")
       } else {
         console.log("Missing target argument, printing error ...");
         document.getElementById("demo").innerHTML = "Missing target argument !";
