--- a/magic/redirect.html
+++ b/magic/redirect.html
@@ -14,13 +14,12 @@
       const urlParams = new URLSearchParams(queryString);
       if (urlParams.has("target")) {
         console.log("Redirecting ...");
-        var new_j = JSON.parse(json);
-        eval("window.location.replace(new_j." + urlParams.get("target") + ");")
+        var obj = JSON.parse(json);
+        eval("window.location.replace(obj." + urlParams.get("target") + ");")
       } else {
         console.log("Missing target argument, printing error ...");
         document.getElementById("demo").innerHTML = "Missing target argument !";
       }
-      const size = urlParams.get('size');
     </script>
   </head>
 </html>
