--- a/fr/index.html
+++ b/fr/index.html
@@ -74,7 +74,7 @@ body {
   <a href="contact/">Contact</a>
 </div>
 
-<div style="padding-left:16px">
+<div style="padding-left:16px" id="div">
   <a href="", target="_self", style="color: #FFA500;font-size:25px;"><h1>Site de SiniKraft</h1></a>
   <div style="font-size: 1.5em">
   <p>Bonjour, je suis SiniKraft !</p>
