--- a/en/index.html
+++ b/en/index.html
@@ -3,6 +3,7 @@
 <title>Sinikraft's website</title>
 <link rel="shortcut icon" type="image/png" href="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1.png?overlay=true"/>
 <head>
+<script type="text/javascript" src="../api/analytics.js" ></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8"/>
 <style>
