--- a/fr/index.html
+++ b/fr/index.html
@@ -18,6 +18,9 @@ footer {
   font-size: 17px;
   text-align: center;
   margin-top: -55px;
+  clear: both;
+  position: relative;
+  height: 55px;
 }
 p {
   color : black;
