--- a/fr/index.html
+++ b/fr/index.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8"/>
 <style>
 footer {
-  position: absolute;
+  position: fixed;
   width: 99.9%;
   padding: 0.5px;
   background-color: #333;
@@ -17,10 +17,7 @@ footer {
   text-decoration: none;
   font-size: 17px;
   text-align: center;
-  margin-top: -55px;
-  clear: both;
-  position: relative;
-  height: 55px;
+  bottom: 0;
 }
 p {
   color : black;
