--- a/fr/index.html
+++ b/fr/index.html
@@ -17,16 +17,6 @@ footer {
   font-size: 17px;
   text-align: center;
 }
-.container {
-  min-height: 100%; // The container will always be 100% height at minimum;
-}
-.content {
-  padding-bottom: 55px; // This is set to the footer height
-}
-.footer {
-  height: 55px; // The footer has a set width
-  margin-bottom: -55px; // We move the footer in the negative space that was created by the padding
-}
 p {
   color : black;
 }
@@ -46,6 +36,15 @@ body {
   background-attachment: fixed;
   background-size: cover;
   text-align: center;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
+}
+html, body {
+width: 100%;
+height: 100%;
+margin:0;
+padding:0;
 }
 
 .topnav {
