--- a/fr/projets/index.html
+++ b/fr/projets/index.html
@@ -54,13 +54,23 @@ h1 {
 }
 
 body {
+  height: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image : url(../../images/bg_home.png);
+  background-image : url(../images/bg_home.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   text-align: center;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
+}
+html, body {
+width: 100%;
+height: 100%;
+margin:0;
+padding:0;
 }
 
 .topnav {
