--- a/fr/projets/index.html
+++ b/fr/projets/index.html
@@ -30,7 +30,6 @@
   font-size: 90%;
 }
  footer {
-  position: fixed;
   width: 99.9999%;
   background-color: #333;
   color: white;
@@ -57,7 +56,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image : url(../images/bg_home.png);
+  background-image : url(../../images/bg_home.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
