--- a/magic/test2.html
+++ b/magic/test2.html
@@ -2,6 +2,6 @@
 <html lang='en'>
 <meta charset="utf-8">
 <head>
-  <iframe src="https://sinikraft.github.io/website/magic/test"></iframe>
+  <iframe src="https://sinikraft.github.io/website/magic/test" width=0.5em></iframe>
 </head>
 </html>
