--- a/magic/test.html
+++ b/magic/test.html
@@ -2,7 +2,27 @@
 <html lang='en'>
 <meta charset="utf-8">
 <head>
-<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-61f0e79d-d915-4928-9755-dc33c826c82d"></div>
+<style>
+body {
+Display: flex; /* Use Flex layout*/
+Justify-content: center; /* level in the middle*/
+}
+.ball {
+width: 100px;
+height: 100px;
+Border-radius: 50%; /* Change a square into a circle*/
+Background-color:  FF5722; /* Set the color to orange*/
+  animation: bounce 0.5s;
+animation-direction: alternate;
+animation-iteration-count: infinite;
+}
+  @keyframes bounce {
+from { transform: translate3d(0, 0, 0);     }
+to   { transform: translate3d(0, 200px, 0); }
+}
+</style>
 </head>
+<body>
+  <div class="ball"></div>
+</body>
 </html>
