--- a/magic/test.html
+++ b/magic/test.html
@@ -11,7 +11,7 @@ Justify-content: center; /* level in the middle*/
 width: 100px;
 height: 100px;
 Border-radius: 50%; /* Change a square into a circle*/
-Background-color:  FF5722; /* Set the color to orange*/
+Background-color:  rgb(121,0,214); /* Set the color to purple*/
   animation: bounce 0.5s;
 animation-direction: alternate;
 animation-iteration-count: infinite;
