--- a/magic/test.html
+++ b/magic/test.html
@@ -17,8 +17,10 @@ animation-direction: alternate;
 animation-iteration-count: infinite;
 }
   @keyframes bounce {
-from { transform: translate3d(0, 0, 0);     }
-to   { transform: translate3d(0, 200px, 0); }
+/*from { transform: translate3d(0, 0, 0);     }*/
+/*to   { transform: translate3d(0, 200px, 0); }*/
+from { width: 0px;     }
+to   { width: 100px; }
 }
 </style>
 </head>
