--- a/magic/test.html
+++ b/magic/test.html
@@ -19,8 +19,8 @@ animation-iteration-count: infinite;
   @keyframes bounce {
 /*from { transform: translate3d(0, 0, 0);     }*/
 /*to   { transform: translate3d(0, 200px, 0); }*/
-from { width: 0px;     }
-to   { width: 100px; }
+from { width: 10px; height: 10px;  }
+to   { width: 100px; height: 100px;}
 }
 </style>
 </head>
