--- a/magic/test.html
+++ b/magic/test.html
@@ -4,6 +4,7 @@
 <head>
 <style>
 body {
+text-align: center;
 Display: flex; /* Use Flex layout*/
 Justify-content: center; /* level in the middle*/
 }
