--- a/magic/test.html
+++ b/magic/test.html
@@ -7,6 +7,8 @@ body {
 text-align: center;
 Display: flex; /* Use Flex layout*/
 Justify-content: center; /* level in the middle*/
+width: 100%;
+height:100%;
 }
 .ball {
 width: 100px;
