--- a/magic/test.html
+++ b/magic/test.html
@@ -9,6 +9,7 @@ Display: flex; /* Use Flex layout*/
 Justify-content: center; /* level in the middle*/
 width: 100%;
 height:100%;
+align-items: center;
 }
 .ball {
 width: 100px;
