--- a/magic/test.html
+++ b/magic/test.html
@@ -10,6 +10,7 @@ Justify-content: center; /* level in the middle*/
 width: 100%;
 height:100%;
 align-items: center;
+position: relative;
 }
 .ball {
 width: 100px;
@@ -19,8 +20,16 @@ Background-color:  rgb(121,0,214); /* Set the color to purple*/
 animation: bounce 0.5s;
 animation-direction: alternate;
 animation-iteration-count: infinite;
-margin-left: auto;
-margin-right: auto;
+/*margin-left: auto;
+margin-right: auto;*/
+display: flex;
+  justify-content: center;
+  align-items: center;margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
   @keyframes bounce {
 /*from { transform: translate3d(0, 0, 0);     }*/
