--- a/magic/test2.html
+++ b/magic/test2.html
@@ -1,8 +1,104 @@
 <!DOCTYPE html>
-<html lang='en'>
-<meta charset="utf-8">
-<head>
-  <iframe src="https://sinikraft.github.io/website/magic/test" width=1em></iframe>
-</head>
+<html lang="en">
+    <meta charset="utf-8" />
+    <head>
+        <style>
+            #_l {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                z-index: 100;
+            }
+            #logo {
+                width: 100%;
+                position: absolute;
+                z-index: 99;
+                max-width: 2000px;
+                max-height: 200px;
+            }
+            body {
+                width: 100%;
+                height: 100%;
+                background-image: radial-gradient(transparent, #8600b3);
+                animation: background-gradient 1s;
+                animation-direction: alternate;
+                animation-iteration-count: infinite;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-attachment: fixed;
+                position: relative;
+            }
+            @keyframes background-gradient {
+                from {
+                    background-color: #d633ff;
+                }
+                to {
+                    background-color: #a73cff;
+                }
+            }
+            .ball {
+                width: 25px;
+                height: 25px;
+                border-radius: 50%;
+                background-color: rgb(121, 0, 214);
+                animation: bounce 0.3s, bounce-ball 0.5s;
+                animation-direction: alternate;
+                animation-iteration-count: infinite;
+                z-index: -99;
+            }
+            @keyframes bounce {
+                from {
+                    transform: scale(0.1);
+                }
+                to {
+                    transform: scale(0.5);
+                }
+            }
+            @keyframes bounce-ball {
+                from {
+                    background-color: #a300cc;
+                }
+                to {
+                    background-color: #d633ff;
+                }
+            }
+        </style>
+    </head>
+    <body id="body">
+        <a id="_l" alt="www.sitew.fr" target="_blank" href="https://www.sitew.com/#utm_campaign=viewer__pro&utm_content=footer_link&utm_medium=viewer_link&utm_source=externhall-site.sitew.fr&utm_term=">
+            <span></span>
+        </a>
+    </body>
+    <script type="text/javascript">
+        var _x = 0;
+        var _y = 0;
+        var div = document.getElementById("body");
+
+        for (let i = 0; i < window.screen.availHeight / 20; i++) {
+            var _div = document.createElement("div");
+            _div.className = "ball";
+            _div.style.top = _x + "px";
+            _div.style.left = _y + "px";
+            _div.style.position = "absolute";
+            div.appendChild(_div);
+            for (let ii = 0; ii < window.screen.availWidth / 20; ii++) {
+                var _div = document.createElement("div");
+                _div.className = "ball";
+                _div.style.top = _x + "px";
+                _div.style.left = _y + "px";
+                _div.style.position = "absolute";
+                div.appendChild(_div);
+                _y = _y + 20;
+            }
+            _x = _x + 20;
+            _y = 0;
+        }
+        var img = document.createElement("img");
+        img.src = "https://raw.githubusercontent.com/SiniKraft/website/main/magic/text2079.png";
+        img.id = "logo";
+        div.appendChild(img);
+    </script>
 </html>
- 
