--- a/magic/test2.html
+++ b/magic/test2.html
@@ -3,6 +3,14 @@
     <meta charset="utf-8" />
     <head>
         <style>
+            #_span {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                z-index: 100;
+            }
             #_l {
                 position: absolute;
                 width: 100%;
@@ -69,7 +77,7 @@
     </head>
     <body id="body">
         <a id="_l" alt="www.sitew.fr" target="_blank" href="https://www.sitew.com/#utm_campaign=viewer__pro&utm_content=footer_link&utm_medium=viewer_link&utm_source=externhall-site.sitew.fr&utm_term=">
-            <span></span>
+            <span id="_span"></span>
         </a>
     </body>
     <script type="text/javascript">
