--- a/fr/contact/index.html
+++ b/fr/contact/index.html
@@ -1,7 +1,7 @@
 <title>Site de SiniKraft</title>
 <!DOCTYPE html>
 <html>
-<link rel="shortcut icon" type="image/png" href="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1.png?overlay=true"/>
+<link rel="shortcut icon" type="image/png" href="https://external-content.duckduckgo.com/iu/?u=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcrafatar.com%2Favatars%2F6d5eecc6-142f-414b-a878-631cb62e91f1.png%3Foverlay%3Dtrue"/>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8"/>
@@ -100,7 +100,7 @@ body {
 <div style="padding-left:16px">
   <a href="", target="_self", style="color: #FFA500;font-size:25px;"><h1>Contact</h1></a>
   <div style="font-size: 1.5em">
-  <p>Pour me contacter, vous pouvez rejoindre <a href="https://minestrator.com/nos/actualites/" target="_blank">le discord de Minestrator.com</a>, et m'ajouter en ami "SiniKraft#7793"</p>
+  <p>Pour me contacter, ajouter moi sur Discord "SiniKraft#7793"</p>
   <p></p>
 </div>
 </div>
