Uses DuckDuckGo to load images, for Privacy !

--- a/en/index.html
+++ b/en/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Sinikraft's website</title>
-<link rel="shortcut icon" type="image/png" href="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1.png?overlay=true"/>
+<link rel="shortcut icon" type="image/png" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcrafatar.com%2Favatars%2F6d5eecc6-142f-414b-a878-631cb62e91f1.png%3Foverlay%3Dtrue"/>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8"/>
@@ -78,7 +78,7 @@ body {
   <p>Hello, I'm SiniKraft !</p>
   <p>Here you can find interesting things about the Honey Pops universe,<br>
     as well as downloading my games and apps in the <a href="projets/", target="_self", style="color: #FFA500">"Projects"</a> tab !
-    <br>Here is my beautiful Minecraft skin:<br><br><img src="https://mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150"></p>
+    <br>Here is my beautiful Minecraft skin:<br><br><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmc-heads.net%2Fplayer%2F6d5eecc6142f414ba878631cb62e91f1%2F150"></p>
 </div>
 </div>
 <footer>
