--- a/en/projects/index.html
+++ b/en/projects/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>SiniKraft's website</title>
-<link rel="shortcut icon" type="image/png" href="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1.png?overlay=true"/>
+<link rel="shortcut icon" type="image/png" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcrafatar.com%2Favatars%2F6d5eecc6-142f-414b-a878-631cb62e91f1.png%3Foverlay%3Dtrue"/>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8"/>
