--- a/fr/index.html
+++ b/fr/index.html
@@ -71,7 +71,6 @@ padding:0;
   color: white;
 }
 </style>
-<img src="https://crafatar.com/avatars/6d5eecc6-142f-414b-a878-631cb62e91f1.png?overlay=true" width="0"height="0" />
 </head>
 <body>
 <div class="container">
@@ -88,7 +87,7 @@ padding:0;
   <p>Bonjour, je suis SiniKraft !</p>
   <p>Ici, tu peux trouver des choses intéressantes sur l'unvivers Miel Pops<br>
   	Ainsi que le téléchargement de mes jeux et applis dans l'onglet <a href="projets/", target="_self", style="color: #FFA500">"Projets"</a> !
-  	<br>Voici mon magnifique skin Minecraft :<br><br><img src="https://mc-heads.net/player/6d5eecc6142f414ba878631cb62e91f1/150"></p>
+  	<br>Voici mon magnifique skin Minecraft :<br><br><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmc-heads.net%2Fplayer%2F6d5eecc6142f414ba878631cb62e91f1%2F150"></p>
 </div>
 </div>
 <footer class="footer">
